Changelog of lizard-waterbalance
===================================================


0.16 (unreleased)
-----------------

- Changed the form to change period.


0.15 (2011-04-19)
-----------------

- Improved the cache mechanism to be able to handle more performant cache
  backends (read memcached).
- Fixed the bug that caused an integrity error when the user tried to add a
  previously removed concentration (ticket 2572).
- Fixed the bug that caused the computation to abort because the required time
  series for the water level computation are not present (tickets 2543 and
  2576).
- Fixed the bug that caused the concentrations of a configurations to be
  created only after the second time the configuration was saved (ticket 2547)
- Fixed a bug that prevented the save to the database of a new WaterbalanceConf.
- Fixed a bug in TimeseriesFews, which prevented the retrieval of the last
  event of a time series.
- Enhanced TimeseriesFews so it can also handle events that have a valid date
  but have None for a value.
- Upgraded timeseries to 0.5.


0.14 (2011-04-06)
-----------------

- Implemented the caching of the graphs for the fraction distribution for
  phosphates and the phosphate impact.
- Implemented the selection of the reset period for the cumulative graphs.
- Implemented initial support for rights management.
- Improved the layout of the left sidebar of the waterbalance summary page.
- Improved the axes of the graph for the fraction distribution for chlorides:
  the maximum value of the left axis is 100, the minimum value of the right
  axis is 0.
- Removed the (unused) graph for the fraction distribution for phosphates.
- Fixed the order of the radio buttons for the selection of the time unit of
  the horizontal axis of each waterbalance graph. The order is now "jaar -
  kwartaal - maand - dag" instead of "jaar - maand - kwartaal - dag".
- Fixed the graph for the cumulative discharge for each quarter.
- Fixed resizing issues with IE 7 and 8 and Chrome.