@@ -33,6 +33,7 @@ from lizard_waterbalance.fraction_computer import FractionComputer
 from lizard_waterbalance.level_control_computer import DateRange
 from lizard_waterbalance.level_control_computer import LevelControlComputer
 from lizard_waterbalance.level_control_assignment import LevelControlAssignment
+from lizard_waterbalance.models import PumpingStation
 from lizard_waterbalance.sluice_error_computer import SluiceErrorComputer
 from lizard_waterbalance.vertical_timeseries_computer import VerticalTimeseriesComputer
 from timeseries.timeseriesstub import enumerate_events
@@ -67,6 +68,18 @@ def transform_evaporation_timeseries_penman_to_makkink(evaporation_timeseries):
 
     return result
 
+
+def find_intake_level_control(open_water):
+    """Find and return the intake to be used for level control.
+
+    Parameter:
+      *open_water*
+        open water to which the intake should belong
+    """
+    intakes_level_control = \
+        PumpingStation.objects.filter(open_water=open_water, into=True,
+                                      computed_level_control=True)
+    return next((intake for intake in intakes_level_control), None)
 
 
 class WaterbalanceComputer2(object):
@@ -818,19 +831,23 @@ class WaterbalanceComputer2(object):
             control = self.get_level_control_timeseries(start_date, end_date)
 
 
-            #intakes, tmp_timeseries = self.retrieve_intakes_timeseries(configuration.open_water)
-            #TO DO
             intakes_timeseries = {}
             for key, timeseries in input['incoming_timeseries'].items():
                 intakes_timeseries[key] = TimeseriesRestrictedStub(timeseries=timeseries,
                                                        start_date=start_date,
                                                        end_date=end_date)
-            intakes_timeseries['intake_wl_control'] = control['intake_wl_control']
+            intake = find_intake_level_control(self.configuration.open_water)
+            if intake is None:
+                logger.warning("No intake for level control is present for "
+                               "configuration %s", self.configuration)
+            else:
+                intakes_timeseries[intake] = control['intake_wl_control']
 
             fractions = self.fraction_computer.compute(self.configuration.open_water,
                                                        buckets_summary,
                                                        vertical_open_water_timeseries["precipitation"],
-                                                       vertical_open_water_timeseries["seepage"],                                                       control['storage'],
+                                                       vertical_open_water_timeseries["seepage"],
+                                                       control['storage'],
                                                        control['total_outgoing'],
                                                        intakes_timeseries,
                                                        start_date,
