@@ -6,6 +6,15 @@ Changelog of lizard-waterbalance
 -----------------
 
 - Changed the form to change period.
+- Fixed the bug that caused the legend of the phosphate impact graph to list
+  the name of the label instead of the name of the intake or pump (ticket
+  2542).
+- Fixed the bug that caused the drawing of the waterbalance graph to fail
+  although the calculation ended successfully (ticket 2650)
+- Fixed the bug that caused the legend of the waterbalance graph to list an
+  incorrect name for a pump that is not for level control (ticket 2651).
+- Fixed the bug that caused the legend of the fraction chloride graph to list
+  the name of the label instead of the name of the intake (ticket 2666).
 
 
 0.15 (2011-04-19)
